<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.traveling.presentation.features.lock.heal.HealViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="330dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_rightarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent" />
        <TextView
            android:id="@+id/heal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title_heal"
            android:textSize="@dimen/titleSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/heal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textLeftMargin"
            android:layout_marginTop="100dp"
            android:text="@string/text_realname"
            android:textSize="@dimen/text_size"
            android:textColor="@color/settingText"
            app:layout_constraintTop_toTopOf="@+id/heal_title"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/heal_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textLeftMargin"
            android:layout_marginTop="50dp"
            android:text="@string/text_realage"
            android:textSize="@dimen/text_size"
            android:textColor="@color/settingText"
            app:layout_constraintTop_toTopOf="@+id/heal_name"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/heal_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textLeftMargin"
            android:layout_marginTop="50dp"
            android:text="@string/text_realcall"
            android:textSize="@dimen/text_size"
            android:textColor="@color/settingText"
            app:layout_constraintTop_toTopOf="@+id/heal_age"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/settingLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="70dp"
            android:src="@color/gray_soLight"
            app:layout_constraintTop_toTopOf="@+id/heal_call"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>