<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.onboard.md.MdViewModel">
    <data>
        <variable
            name="vm"
            type="com.traveling.presentation.features.onboard.md.MdViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center|top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/titleMargin"
                    android:text="@string/title_md"
                    android:textSize="@dimen/titleSize"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/textLeftMargin"
                    android:layout_marginTop="40dp"
                    android:text="@string/text_morning"
                    android:textSize="@dimen/text_size"/>
                <LinearLayout
                    android:layout_width="310dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/mdMorningHour"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:maxLength="2"
                        android:hint="@string/hintTime"
                        android:inputType="number"
                        android:text="@={vm.day11}"
                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:background="@drawable/editbackground"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:text=":"
                        android:textSize="@dimen/text_time"/>
                    <EditText
                        android:id="@+id/mdMorningMin"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:text="@={vm.day12}"
                        android:hint="@string/hintTime"
                        android:inputType="number"
                        android:maxLength="2"

                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:background="@drawable/editbackground"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/textLeftMargin"
                    android:layout_marginTop="40dp"
                    android:text="@string/text_lunch"
                    android:textSize="@dimen/text_size"/>
                <LinearLayout
                    android:layout_width="310dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/mdLunchHour"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:text="@={vm.day21}"
                        android:inputType="number"
                        android:maxLength="2"

                        android:hint="@string/hintTime"
                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:background="@drawable/editbackground"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:text=":"
                        android:textSize="@dimen/text_time"/>
                    <EditText
                        android:id="@+id/mdLunchMin"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:hint="@string/hintTime"
                        android:text="@={vm.day22}"
                        android:inputType="number"
                        android:maxLength="2"

                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:background="@drawable/editbackground"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/textLeftMargin"
                    android:layout_marginTop="40dp"
                    android:text="@string/text_dinner"
                    android:textSize="@dimen/text_size"/>
                <LinearLayout
                    android:layout_width="310dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/mdDinnerHour"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:inputType="number"
                        android:maxLength="2"

                        android:hint="@string/hintTime"
                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:text="@={vm.day31}"
                        android:background="@drawable/editbackground"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:text=":"
                        android:textSize="@dimen/text_time"/>
                    <EditText
                        android:id="@+id/mdDinnerMin"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:inputType="number"
                        android:maxLength="2"

                        android:hint="@string/hintTime"
                        android:textColorHint="@color/hintColor"
                        android:gravity="center"
                        android:text="@={vm.day32}"
                        android:background="@drawable/editbackground"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/textTopMargin"
                    style="@style/button"
                    android:text="확인"
                    android:textSize="@dimen/text_size"
                    android:onClick="@{() -> vm.onClickComplete()}"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>