<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.traveling.presentation.features.lock.screen.ScreenViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/lock_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_time"
            android:textSize="@dimen/titleLock"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/lock_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/text_date"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@+id/lock_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/lock_manbogi"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/lock_date"
            style="@style/card">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/walk_count"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:text="만보기"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/walk_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/walk"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/gray"
                    android:textSize="38sp"
                    android:text="2000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/walk_count"
                    app:layout_constraintBottom_toBottomOf="@id/walk_count"

                    android:textColor="@color/gray"
                    android:textSize="22sp"
                    android:text="걸음"/>
                <ImageView
                    android:id="@+id/img_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/km"
                    app:layout_constraintBottom_toBottomOf="@id/km"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_run"
                    />
                <TextView
                    android:id="@+id/km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    android:text="2.09km"/>
                <ImageView
                    android:id="@+id/img_fire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fire"
                    app:layout_constraintEnd_toStartOf="@id/kcal"
                    app:layout_constraintBottom_toBottomOf="@id/kcal"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/kcal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/km"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    android:text="88kcal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/lock_heal"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/lock_manbogi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> vm.onClickHeal()}"
            style="@style/card">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/lock_ic_heal"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_heal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/text_heal"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    app:layout_constraintTop_toTopOf="@id/lock_ic_heal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lock_exit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/lock_pass"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/lock_heal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/button"
            android:onClick="@{() -> vm.onClickExit()}">
        </androidx.appcompat.widget.AppCompatButton>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
